feat: Update OAuth provider to Google for signin and signup pages

--- a/appwrite/my-astro-project/src/pages/account.astro
+++ b/appwrite/my-astro-project/src/pages/account.astro
@@ -21,7 +21,7 @@ function getInitials(name: string) {
   if (last) return `${first[0]}${last[0]}`;
   return `${first[0]}`;
 }
-
+console.log(user);
 const userInitials = getInitials(user.name);
 ---
 
