--- a/appwrite/my-astro-project/src/pages/signin.astro
+++ b/appwrite/my-astro-project/src/pages/signin.astro
@@ -89,7 +89,7 @@ if (Astro.request.method === "POST") {
       <form method="POST" action="/oauth">
         <button class="button is-github is-full-width" type="submit">
           <span class="icon-github" aria-hidden="true"></span>
-          <span class="text">Sign in with GitHub</span></button
+          <span class="text">Sign in with google</span></button
         >
       </form>
     </div>
