--- a/appwrite/my-astro-project/src/pages/signup.astro
+++ b/appwrite/my-astro-project/src/pages/signup.astro
@@ -89,14 +89,14 @@ if (Astro.request.method === "POST") {
       <form method="POST" action="/oauth">
         <button class="button is-github is-full-width" type="submit">
           <span class="icon-github" aria-hidden="true"></span>
-          <span class="text">Sign in with GitHub</span></button
+          <span class="text">Signup in with google</span></button
         >
       </form>
     </div>
     <ul class="inline-links is-center is-with-sep u-margin-block-start-32">
       <li class="inline-links-item">
         <span class="text"
-          >Don't have an account? <a class="link" href="/signup">Sign up</a
+          >Don't have an account? <a class="link" href="/signin">Sign up</a
           ></span
         >
       </li>
